--- a/notebooks/all_notebooks_sum.ipynb
+++ b/notebooks/all_notebooks_sum.ipynb
@@ -1327,6 +1327,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/10/05 13:08:44 WARN TransportChannelHandler: Exception in connection from /192.168.1.118:52153\n",
+      "java.io.IOException: Operation timed out\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read0(Native Method)\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read(SocketDispatcher.java:47)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.readIntoNativeBuffer(IOUtil.java:340)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:294)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:269)\n",
+      "\tat java.base/sun.nio.ch.SocketChannelImpl.read(SocketChannelImpl.java:417)\n",
+      "\tat io.netty.buffer.PooledByteBuf.setBytes(PooledByteBuf.java:258)\n",
+      "\tat io.netty.buffer.AbstractByteBuf.writeBytes(AbstractByteBuf.java:1132)\n",
+      "\tat io.netty.channel.socket.nio.NioSocketChannel.doReadBytes(NioSocketChannel.java:350)\n",
+      "\tat io.netty.channel.nio.AbstractNioByteChannel$NioByteUnsafe.read(AbstractNioByteChannel.java:151)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKey(NioEventLoop.java:722)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeysOptimized(NioEventLoop.java:658)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeys(NioEventLoop.java:584)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.run(NioEventLoop.java:496)\n",
+      "\tat io.netty.util.concurrent.SingleThreadEventExecutor$4.run(SingleThreadEventExecutor.java:986)\n",
+      "\tat io.netty.util.internal.ThreadExecutorMap$2.run(ThreadExecutorMap.java:74)\n",
+      "\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n"
+     ]
     }
    ],
    "source": [
