--- a/notebooks/all_notebooks_sum.ipynb
+++ b/notebooks/all_notebooks_sum.ipynb
@@ -121,8 +121,10 @@
     "ori_transaction = ori_transaction1.union(ori_transaction2)\n",
     "ori_transaction = ori_transaction.union(ori_transaction3)\n",
     "ori_transaction = ori_transaction.drop('order_id')\n",
+    "ori_transaction = ori_transaction.dropna(how='any')\n",
     "ori_transaction = ori_transaction.filter(\"order_datetime >= '2021-02-28'\")\n",
     "ori_transaction = ori_transaction.filter(\"order_datetime <= '2022-08-28'\")\n",
+    "\n",
     "\n",
     "# delete outliers\n",
     "wind = Window.partitionBy('merchant_abn')\n",
