--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/10/05 20:57:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/06 12:06:13 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 10.13.240.228 instead (on interface en0)\n",
+      "22/10/06 12:06:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/10/06 12:06:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -34,18 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
-    "from numpy import array"
+    "from numpy import array\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_relative_dir = \"../data/curated/\"\n",
+    "target_dir = \"prediction\"\n",
+    "if not os.path.exists(output_relative_dir + target_dir):\n",
+    "        os.makedirs(output_relative_dir + target_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 2:===============================================>           (4 + 1) / 5]\r"
+      "[Stage 2:>                                                          (0 + 4) / 5]\r"
      ]
     },
     {
@@ -211,9 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -248,10 +270,7 @@
     }
    ],
    "source": [
-    "#Xは18ヶ月分の月\n",
-    "#merchant_abnごとに\n",
-    "#月のaverageをとってデータにする:Y\n",
-    "#計算をする\n",
+    "\n",
     "from pyspark.sql.types import IntegerType\n",
     "start_month = tbl_transaction.select(min(\"order_datetime\").alias(\"min_date\")).select(month(\"min_date\").cast(IntegerType())).collect()[0][0]\n",
     "\n",
@@ -272,6 +291,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Time series forcasting with Multilayer-perceptron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "referenced cite: \n",
     "- https://bobrupakroy.medium.com/multi-layer-perception-time-series-8a1bddbb033a\n",
     "- https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/\n",
@@ -280,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,23 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-05 21:05:43.780473: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "n_months = 3\n",
+    "n_months = 4\n",
     "model = Sequential()\n",
-    "model.add(Dense(100, activation='relu', input_dim=n_months))\n",
+    "model.add(Dense(32, activation='relu', input_dim=n_months))\n",
     "model.add(Dense(1))\n",
     "model.compile(optimizer='adam', loss='mse')"
    ]
@@ -338,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -349,55 +366,13 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 827:============================>                            (2 + 2) / 4]\r"
-     ]
-    },
-    {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_r/5qlbmxqj2yscq5d1p31h95m80000gn/T/ipykernel_1441/526367287.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m                     \u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mlist_dollar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mone_merchant_and_missing_values\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"avg_dollar_value\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsec_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_dollar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_months\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/_r/5qlbmxqj2yscq5d1p31h95m80000gn/T/ipykernel_4955/2830893182.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m                     \u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minitial_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mlist_dollar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mone_merchant_and_missing_months\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"avg_dollar_value\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsec_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_dollar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_months\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36mrdd\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     83\u001b[0m         \"\"\"\n\u001b[1;32m     84\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lazy_rdd\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m             \u001b[0mjrdd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjavaToPython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lazy_rdd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRDD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjrdd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql_ctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBatchedSerializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPickleSerializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lazy_rdd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1306\u001b[0m             \u001b[0mproto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEND_COMMAND_PART\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1308\u001b[0;31m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1309\u001b[0m         return_value = get_return_value(\n\u001b[1;32m   1310\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36msend_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1036\u001b[0m         \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_connection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1037\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1038\u001b[0;31m             \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1039\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mbinary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1040\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_create_connection_guard\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconnection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -408,25 +383,32 @@
     }
    ],
    "source": [
-    "data = transaction_month_num.select(\"merchant_abn\", \"dollar_value\", \"month_num\").sort(\"merchant_abn\", \"month_num\")\n",
-    "distinct_merchants = data.select(\"merchant_abn\").distinct().rdd.flatMap(lambda x: x).collect()\n",
-    "MONTH_PERIOD = 18\n",
+    "# predict the dollar value one month after\n",
+    "data = transaction_month_num.select(\"merchant_abn\", \"dollar_value\", \"month_num\")\n",
+    "distinct_merchants = sorted(data.select(\"merchant_abn\").distinct().rdd.flatMap(lambda x: x).collect())\n",
     "\n",
+    "MONTH_PERIOD = 18\n",
     "predict_store = []\n",
+    "counts = 0\n",
+    "n_merchnts = len(distinct_merchants)\n",
+    "save_freq = 100\n",
+    "\n",
+    "#create a dataframe with month period as columns\n",
     "month = [m for m in range(1, MONTH_PERIOD+2)]\n",
     "zeros = [0]*MONTH_PERIOD\n",
     "month_list_initial = zip(month,zeros)\n",
     "initial_df = spark.createDataFrame(data=month_list_initial, schema = [\"month_num\", \"zeros\"])\n",
+    "\n",
     "for merchant in distinct_merchants:\n",
     "    one_merchant_data = data.filter(F.col(\"merchant_abn\")==merchant)\\\n",
     "                            .groupBy(F.col(\"month_num\"))\\\n",
     "                            .agg(F.avg(\"dollar_value\").alias(\"avg_dollar_value\"))\n",
     "     \n",
-    "    one_merchant_and_missing_values = initial_df.join(one_merchant_data, initial_df.month_num == one_merchant_data.month_num, \"left\")\\\n",
+    "    one_merchant_and_missing_months = initial_df.join(one_merchant_data, initial_df.month_num == one_merchant_data.month_num, \"left\")\\\n",
     "                    .na.fill(value=0)\\\n",
     "                    .sort(initial_df.month_num)\n",
     "\n",
-    "    list_dollar = one_merchant_and_missing_values.select(\"avg_dollar_value\").rdd.flatMap(lambda x: x).collect()\n",
+    "    list_dollar = one_merchant_and_missing_months.select(\"avg_dollar_value\").rdd.flatMap(lambda x: x).collect()\n",
     "    X, y = consec_data(list_dollar, n_months)\n",
     "\n",
     "    #fit\n",
@@ -437,6 +419,18 @@
     "    ypredict = model.predict(x_input, verbose=0)\n",
     "    predict_store.append((merchant, ypredict[0][0]))\n",
     "\n",
+    "    #write for each 100 merchant prediction\n",
+    "    if len(predict_store)%save_freq == 0:\n",
+    "        print(len(predict_store))\n",
+    "        save_df = spark.createDataFrame(data=predict_store, schema = [\"merchant_abn\",\"predict_dollar_value\"])\n",
+    "        save_df.to_parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
+    "        predict_store = []\n",
+    "        counts += 1\n",
+    "    elif (counts+1)*save_freq+len(predict_store) == n_merchnts: #last remaining data\n",
+    "        save_df = spark.createDataFrame(data=predict_store, schema = [\"merchant_abn\",\"predict_dollar_value\"])\n",
+    "        save_df.to_parquet(f\"../data/curated/prediction/predicted_dollar_value{counts}.parquet\")\n",
+    "    else:\n",
+    "        continue\n",
     "    "
    ]
   },
@@ -454,8 +448,7 @@
     }
    ],
    "source": [
-    "#save_df = spark.createDataFrame(data=predict_store, schema = [\"merchant_abn\",\"predict_dollar_value\"])\n",
-    "#save_df.to_parquet(f\"../data/curated/predicted_dollar_value.parquet\")\n",
+    "#\n",
     "print(len(distinct_merchants))"
    ]
   }
