update all notebook
delete outer

--- a/notebooks/all_notebooks_sum.ipynb
+++ b/notebooks/all_notebooks_sum.ipynb
@@ -128,7 +128,7 @@
     "    \"whether_fraud\",\n",
     "    F.when(F.col('average_prob_con')>=70, 1).otherwise(0))\n",
     "\n",
-    "consumer_final = consumer.join(consumer_fraud_final, consumer.user_id == consumer_fraud_final.user_id,'outer').drop(consumer_fraud_final.user_id).fillna(0).fillna(0)\n",
+    "consumer_final = consumer.join(consumer_fraud_final, consumer.user_id == consumer_fraud_final.user_id).drop(consumer_fraud_final.user_id).fillna(0).fillna(0)\n",
     "consumer_final.write.parquet(f\"../data/curated/final_consumer.parquet\")\n",
     "\n",
     "transaction = ori_transaction.join(consumer_final, ori_transaction.user_id == consumer_final.user_id).drop(consumer_final.user_id)\n",
